Fix mobile spacing around preview

--- a/css/main.css
+++ b/css/main.css
@@ -28992,6 +28992,10 @@ body {
   font-size: 16px;
 }
 
+img {
+  vertical-align: middle;
+}
+
 @media screen and (min-width: 544px) {
   .sidebar {
     flex-basis: 20rem;
