--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -4,6 +4,10 @@ body {
   font-size: 16px;
 }
 
+img {
+  vertical-align: middle;
+}
+
 .sidebar {
   // 544 comes from Primer’s sm breakpoint
   @media screen and (min-width: 544px) {
